- Improvement: Add mark that tuition penalty was created by academic debt generation rule instead of academic service request in the Registration details 

6.5.1 (10-02-2020)
6.5.0 (07-02-2020)
- Refactor: Removed deprecated FirstTimeCandidacy subclass

6.4.4 (06-02-2020)
- Fix: Check if candidacy has active situation

6.4.3 (06-02-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core (StudentCandidacy not abstract anymore)

6.4.2 (04-02-2020)
- Improvement: added IDEFE qualitative grades

6.4.1 (29-01-2020)
- Refactor: Replaced semester references by childOrder

6.4.0 (24-12-2019)
- Refactor: Upgraded fenixedu-academic-core and replaced ExecutionSemester references to ExecutionInterval

6.3.1 (29-11-2019)
- Fix: Degree types on optional curricular course enrolment should only be restricted if they are defined on curricular rule
 

6.3.0 (23-11-2019)
- Refactor: Upgraded dependency of fenixedu-academic-core

6.2.0 (21-11-2019)
- Refactor: Included new access control Permissions to existing AcademicAuthorizations

6.1.1 (08-11-2019)
- Improvement: added ISEG/ISCSP qualitative grades
- Improvement: Add curricular plan column to the student's report in the MoodleExportController #UL-FF-1835

6.1.0 (22-10-2019)
- Refactor: Invocation of method factory for Registration creation

6.0.1 (17-10-2019)
- Improvement: adding validations to the EECC table generation.

6.0.0 (11-10-2019)
- Improvement: added export options to service requests search screen
- Improvement: display emergency contact in student personal details and export in registration history report
- Refactor: changed MobilityRegistatrionUlisboaInformation domain relations from ExecutionSemester to ExecutionInterval
- Refactor: Upgrade dependency of fenixedu-academic-extensions (changed domain relations from ExecutionSemester to ExecutionInterval)

5.5.4 (07-10-2019)
- Fix: Print program conclusion - hide left menu ( #UL-ISA-1056 )

5.5.3 (02-10-2019)