@@ -1,4 +1,5 @@
 - Improvement: Add mark that tuition penalty was created by academic debt generation rule instead of academic service request in the Registration details 
+- Bug Fix: Check all registrations associated with degree curricular plan, instead of active registrations only
 
 6.5.1 (10-02-2020)
 6.5.0 (07-02-2020)
